tests/ui/invalid-ident-space.fail.rs
ident_str::ident_str! {
    #name = "hello world"
    =>
}

fn main() {}
